tests/baselines/reference/derivedStructSuperCallsInNonConstructorMembers.errors.txt
tests/cases/conformance/structs/constructorDeclarations/structSuperCalls/derivedStructSuperCallsInNonConstructorMembers.ts(9,8): error TS1110: Type expected.
tests/cases/conformance/structs/constructorDeclarations/structSuperCalls/derivedStructSuperCallsInNonConstructorMembers.ts(9,8): error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
tests/cases/conformance/structs/constructorDeclarations/structSuperCalls/derivedStructSuperCallsInNonConstructorMembers.ts(11,9): error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
tests/cases/conformance/structs/constructorDeclarations/structSuperCalls/derivedStructSuperCallsInNonConstructorMembers.ts(14,15): error TS1110: Type expected.
tests/cases/conformance/structs/constructorDeclarations/structSuperCalls/derivedStructSuperCallsInNonConstructorMembers.ts(14,15): error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
tests/cases/conformance/structs/constructorDeclarations/structSuperCalls/derivedStructSuperCallsInNonConstructorMembers.ts(16,9): error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.


==== tests/cases/conformance/structs/constructorDeclarations/structSuperCalls/derivedStructSuperCallsInNonConstructorMembers.ts (6 errors) ====
    // doc 3.2
    // error to use super calls outside a constructor or in nested functions inside constructors
    
    struct Base {
        x: string;
    }
    
    struct Derived extends Base {
        a: super(); // error
           ~~~~~
!!! error TS1110: Type expected.
           ~~~~~
!!! error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
        b() {
            super(); // error
            ~~~~~
!!! error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
        }
    
        static a: super(); // error
                  ~~~~~
!!! error TS1110: Type expected.
                  ~~~~~
!!! error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
        static b() {
            super(); // error
            ~~~~~
!!! error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
        }
    }